--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Web</title>
+    <title>Git Rendu</title>
 </head>
 <body>
     <header>
-        <h1>Mon Site Web</h1>
+        <h1>Git Rendu Site</h1>
         <nav>
             <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">À propos</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Présentation Florian</a></li>
+                <li><a href="#">présentation Bruni</a></li>
             </ul>
         </nav>
     </header>
