--- a/index.html
+++ b/index.html
@@ -4,6 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Rendu</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+        }
+
+        h1, h2 {
+            color: #333;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -11,7 +59,7 @@
         <nav>
             <ul>
                 <li><a href="#">Présentation Florian</a></li>
-                <li><a href="#">présentation Bruni</a></li>
+                <li><a href="#">Présentation Bruni</a></li>
             </ul>
         </nav>
     </header>
@@ -23,5 +71,8 @@
         </section>
     </main>
 
+    <footer>
+        <p>&copy; 2023 Mon Site Web</p>
+    </footer>
 </body>
 </html>
