--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Rendu</title>
-    
 </head>
 <body>
     <header>
@@ -12,12 +11,18 @@
         <nav>
             <ul>
                 <li><a href="#">Présentation Florian</a></li>
-                <li><a href="#">Présentation Bruni</a></li>
+                <li><a href="#">présentation Bruni</a></li>
             </ul>
         </nav>
     </header>
 
-    
+    <main>
+        <section>
+            <h2>À propos de nous</h2>
+            <p>Bienvenue sur notre site web. Nous sommes une entreprise dédiée à...</p>
+        </section>
+    </main>
+
     <footer>
         <p>&copy; 2023 Mon Site Web</p>
     </footer>
