:tada: debut projet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Les descriptions personnelles</h1>
+    <div class="all-page">
+        <div class="NavBar">
+           <div class="title">
+            <h1>
+                Descriptions Teams
+            </h1>
+            <div class="options">
+                <ul>
+                    <li>Musiques</li>
+                    <li>Passions</li>
+                    <li>Activités</li>
+                </ul>
+            </div>
+           </div>
+        </div>
+    </div>
 </body>
 </html>
