--- a/index.html
+++ b/index.html
@@ -3,24 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <div class="all-page">
-        <div class="NavBar">
+        <nav class="NavBar">
            <div class="title">
-            <h1>
-                Descriptions Teams
-            </h1>
-            <div class="options">
-                <ul>
-                    <li>Musiques</li>
-                    <li>Passions</li>
-                    <li>Activités</li>
-                </ul>
+              <p>
+                  Descriptions Teams
+              </p>
             </div>
+            <div class="nav-options">
+                <div class="options">
+                    <h5 class="">Musiques</h5>
+                    <ul class="list-options">
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                        <li class="li-opt"><a class="" href="#">Another </a></li>
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                    </ul>
+                </div>  
+                <div class="options">
+                    <h5 class="">Films</h5>
+                    <ul class="list-options">
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                        <li class="li-opt"><a class="" href="#">Another </a></li>
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                    </ul>
+                </div>  
+                <div class="options">
+                    <h5 class="">Activités</h5>
+                    <ul class="list-options">
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                        <li class="li-opt"><a class="" href="#">Another action</a></li>
+                        <li class="li-opt"><a class="" href="#">Action</a></li>
+                    </ul>
+                </div> 
+            </div> 
+        </nav>
+        <div class="description-part">
+           <nav class="nav-name">
+               <ul>
+                  <li class="name"><a class="brunic" href="">Brunic</a></li>
+                  <li class="name"><a class="florian" href="">Florian</a></li>
+               </ul>
+           </nav> 
+           <div class="photo">
+              <img src="" alt="">
+              <p> Florian </p>
            </div>
+           <div class="titre-parcours">
+               <div class="Parcours">
+                   <p>Parcours</p>
+               </div>
+               <div class="desc-parcours">
+                  <p> </p>
+               </div>
+           </div>
+           <div class="titre-passions">
+            <div class="passions">
+                <p>Passions</p>
+            </div>
+            <div class="desc-passions">
+               <p> </p>
+            </div>
+        </div>
+        <div class="titre-comportement">
+            <div class="comportement">
+                <p>Comment est-il ?</p>
+            </div>
+            <div class="desc-comportement">
+               <p> </p>
+            </div>
+        </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
