--- a/index.html
+++ b/index.html
@@ -3,28 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Rendu</title>
+    <title>Page de profil</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Git Rendu Site</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Présentation Florian</a></li>
-                <li><a href="#">présentation Bruni</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h2>À propos de nous</h2>
-            <p>Bienvenue sur notre site web. Nous sommes une entreprise dédiée à...</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Mon Site Web</p>
-    </footer>
+    <nav>
+        <h2>Navigation</h2>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=IzlvHrhHKuY&ab_channel=Ceinturenoire">Musique</a></li>
+            <li><a href="https://www.youtube.com/watch?v=XuDwndGaCFo&ab_channel=Netflix">Film</a></li>
+            <li><a href="https://www.youtube.com/watch?v=HfIB90746gs&ab_channel=MusiqueRelax">Activité</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <div class="name-section">
+            <a href="lien_vers_page_florian.html">Florian</a> et <a href="lien_vers_page_bruni.html">Bruni</a>
+        </div>
+        <div class="profile">
+            <img src="photo-profile.jpeg" alt="Photo de profil" style="max-width: 100px;">
+        </div>
+        <div class="name-age">
+            <p>Nom: Brunic</p>
+            <p>Âge: 18 ans</p>
+        </div>
+        <div class="section" id="parcours">
+            <h2>Parcours Scolaire</h2>
+            <img src="image-parcours.jpg" alt="Image du parcours" style="max-width: 100px;">
+            <p>Brunic a commencé par un BAC spé physique-chimie et mathématiques, puis elle est entré en première année à l’IIM. 
+                Elle a pu exploré tous les domaines que l'école propose et a finalement choisi l'axe Coding et Innovation Numérique. 
+                Petit mot de Brunic sur sa premiere année : "C'était une expérience formidable malgré les hauts et les bas. J'ai rencontré des personnes qui m'entraînent souvent à l'Aubrac. 
+                J'ai réussi mon année et aujourd'hui je suis en A2 dans l'axe souhaité".</p>
+        </div>
+        <div class="section" id="passions">
+            <h2>Passions</h2>
+            <img src="image-passions.jpg" alt="Image des passions" style="max-width: 100px;">
+            <p>Texte</p>
+        </div>
+        <div class="section" id="comportement">
+            <h2>Comportement</h2>
+            <img src="image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
+            <p>Texte</p>
+        </div>
+    </div>
 </body>
 </html>
