--- a/florian.html
+++ b/florian.html
@@ -42,7 +42,11 @@
         <div class="section" id="comportement">
             <h2>Comportement</h2>
             <img src="image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
-            <p>Texte</p>
+            <p>Tout d’abord Brunic est une personne relativement calme. 
+                Elle se décrit comme à moitié sociable parce que elle parle et sympathise quand il le faut. À côté de tout ceci elle est plutôt bien organisé dans ses journées en général. 
+                Elle prévoit bien avant ce qu’elle doit faire les jours suivants. On l’a très souvent décrit comme ambitieuse et travailleuse parce qu’elle se fixe des objectifs. 
+                Mais elle est aussi très souriante.Elle s’adapte aux personnes ou à la situation en face d’elle. 
+                Enfin elle aime tout ce qui a attrait à la réflexion, elle apprécie l’art, les couleurs et le design dans leur globalité. </p>
         </div>
     </div>
 </body>
