:busts_in_silhouette: Ajout du travail de Florian

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                </ul>
            </nav> 
            <div class="photo">
-              <img src="florian-img.jpg" alt="Une image de Florian">
+              <img src="/image/florian-img.jpg" alt="Une image de Florian">
               <p> Florian DECODTS <br> 22 ans <br> Maison-alfort</p>
               
 
