:coffin: arranger les soucis dans le css de Florian

--- a/florian.html
+++ b/florian.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page de profil</title>
-    <link rel="stylesheet" type="text/css" href="florian-style.css">
+    <base href="..">
+    <link rel="stylesheet"  href="../css/style.css">
+    <title>Document</title>
+    
 </head>
-<body>
+<body class="body">
     <nav>
         <h2>Navigation</h2>
-        <ul>
+        <ul class="ul">
             <li><a href="https://www.youtube.com/watch?v=IzlvHrhHKuY&ab_channel=Ceinturenoire">Musique</a></li>
             <li><a href="https://www.youtube.com/watch?v=XuDwndGaCFo&ab_channel=Netflix">Film</a></li>
             <li><a href="https://www.youtube.com/watch?v=HfIB90746gs&ab_channel=MusiqueRelax">Activité</a></li>
@@ -17,10 +19,10 @@
     </nav>
     <div class="content">
         <div class="name-section">
-            <a href="lien_vers_page_florian.html">Florian</a> et <a href="lien_vers_page_bruni.html">Bruni</a>
+            <a href="lien_vers_page_florian.html">Florian</a> et <a href="lien_vers_page_bruni.html">Brunic</a>
         </div>
         <div class="profile">
-            <img src="photo-profile.jpeg" alt="Photo de profil" style="max-width: 100px;">
+            <img src="/image/photo-profile.jpeg" alt="Photo de profil" style="max-width: 100px;">
         </div>
         <div class="name-age">
             <p>Nom: Brunic</p>
@@ -28,7 +30,7 @@
         </div>
         <div class="section" id="parcours">
             <h2>Parcours Scolaire</h2>
-            <img src="image-parcours.jpg" alt="Image du parcours" style="max-width: 100px;">
+            <img src="/image/image-parcours.jpg" alt="Image du parcours" style="max-width: 100px;">
             <p>Brunic a commencé par un BAC spé physique-chimie et mathématiques, puis elle est entrée en première année à l’IIM. 
                 Elle a pu explorer tous les domaines que l'école propose et a finalement choisi l'axe Coding et Innovation Numérique. 
                 Petit mot de Brunic sur sa première année : "C'était une expérience formidable malgré les hauts et les bas. J'ai rencontré des personnes qui m'entraînent souvent à l'Aubrac. 
@@ -36,12 +38,12 @@
         </div>
         <div class="section" id="passions">
             <h2>Passions</h2>
-            <img src="image-passions.jpg" alt="Image des passions"style="max-width: 100px;">
+            <img src="/image/image-passions.jpg" alt="Image des passions"style="max-width: 100px;">
             <p>Texte</p>
         </div>
         <div class="section" id="comportement">
             <h2>Comportement</h2>
-            <img src="image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
+            <img src="/image/image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
             <p>Tout d’abord Brunic est une personne relativement calme. 
                 Elle se décrit comme à moitié sociable parce que elle parle et sympathise quand il le faut. À côté de tout ceci elle est plutôt bien organisé dans ses journées en général. 
                 Elle prévoit bien avant ce qu’elle doit faire les jours suivants. On l’a très souvent décrit comme ambitieuse et travailleuse parce qu’elle se fixe des objectifs. 
