--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="description-part">
            <nav class="nav-name">
                <ul>
-                  <li class="name"><a class="brunic" href="">Brunic</a></li>
-                  <li class="name"><a class="florian" href="">Florian</a></li>
+                  <li class="name"><a class="brunic" href="/index.html">Brunic</a></li>
+                  <li class="name"><a class="florian" href="/florian.html">Florian</a></li>
                </ul>
            </nav> 
            <div class="photo">
