--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Document</title>
 </head>
 <body>
     <div class="all-page">
@@ -46,8 +47,8 @@
         <div class="description-part">
            <nav class="nav-name">
                <ul>
-                  <li class="name"><a class="brunic" href="/index.html">Brunic</a></li>
-                  <li class="name"><a class="florian" href="/florian.html">Florian</a></li>
+                  <li class="name"><a class="brunic" href="/florian.html">Brunic</a></li>
+                  <li class="name"><a class="florian" href="/index.html">Florian</a></li>
                </ul>
            </nav> 
            <div class="photo">
