--- a/florian.html
+++ b/florian.html
@@ -50,8 +50,8 @@
         <div class="content">
             <nav class="nav-name">
                 <ul>
-                   <li class="name"><a class="brunic" href="https://fl0-94.github.io/test/">Brunic</a></li>
-                   <li class="name"><a class="florian" href="index.html">Florian</a></li>
+                   <li class="name"><a class="brunic" href="/florian.html">Brunic</a></li>
+                   <li class="name"><a class="florian" href="/index.html">Florian</a></li>
                 </ul>
             </nav>
             <div class="profile">
