--- a/florian.html
+++ b/florian.html
@@ -72,7 +72,7 @@
             <div class="section" id="passions">
                 <h2>Passions</h2>
                 <img src="/image/image-passions.jpg" alt="Image des passions"style="max-width: 100px;">
-                <p>Brunic aime beaucoup la musique Elle adore écouter de la musique et écoutant différents artistes et différents style de musique.
+                <p>Brunic aime beaucoup la musique. Elle adore écouter de la musique en écoutant différents artistes et différents style de musique.
                     Elle aime aussi faire de la danse./p>
             </div>
             <div class="section" id="comportement">
