:safety_vest: Les dernières modifications à valider

--- a/florian.html
+++ b/florian.html
@@ -11,35 +11,35 @@
 <body class="body">
     
         <nav class="nav">
-            <div class="title">
+            <div class="title1">
                <p>
                    Descriptions Teams
                </p>
  
              </div>
-             <div class="nav-options">
-                 <div class="options">
+             <div class="nav-options1">
+                 <div class="options1">
                      <h5 class="">Musiques</h5>
-                     <ul class="list-options">
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/channel/UCCB1Byx5yTbLpQaV-rlfmtA">Gims</a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/channel/UCK_VcEZMqhLaKyBUKL9H3CQ">Mannywellz </a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/channel/UCHGF6zfD2gwLuke95X3CKFQ">Rema</a></li>
+                     <ul class="list-options1">
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/channel/UCCB1Byx5yTbLpQaV-rlfmtA">Gims</a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/channel/UCK_VcEZMqhLaKyBUKL9H3CQ">Mannywellz </a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/channel/UCHGF6zfD2gwLuke95X3CKFQ">Rema</a></li>
                      </ul>
                  </div>  
-                 <div class="options">
+                 <div class="options1">
                      <h5 class="">Films</h5>
-                     <ul class="list-options">
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=mEsBa_ss-nA&ab_channel=NetflixFrance">Agent Stone</a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=3_fauwFQ7R4&ab_channel=FilmsActu">Dynastie</a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=0ULjL4cbSro&ab_channel=FilmsActu">La casa de papel</a></li>
+                     <ul class="list-options1">
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=mEsBa_ss-nA&ab_channel=NetflixFrance">Agent Stone</a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=3_fauwFQ7R4&ab_channel=FilmsActu">Dynastie</a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=0ULjL4cbSro&ab_channel=FilmsActu">La casa de papel</a></li>
                      </ul>
                  </div>  
-                 <div class="options">
+                 <div class="options1">
                      <h5 class="">Activités</h5>
-                     <ul class="list-options">
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=9sz_FdZxOBc&ab_channel=PlayMusic">Guitare</a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=tBo0UcmB830&ab_channel=MattSteffanina">Dance</a></li>
-                         <li class="li-opt"><a class="" href="https://www.youtube.com/watch?v=ka0xA20vf4Y&ab_channel=LucileWoodward">Sport</a></li>
+                     <ul class="list-options1">
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=9sz_FdZxOBc&ab_channel=PlayMusic">Guitare</a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=tBo0UcmB830&ab_channel=MattSteffanina">Dance</a></li>
+                         <li class="li-opt1"><a class="" href="https://www.youtube.com/watch?v=ka0xA20vf4Y&ab_channel=LucileWoodward">Sport</a></li>
                      </ul>
                  </div> 
              </div> 
@@ -48,10 +48,10 @@
     
    
         <div class="content">
-            <nav class="nav-name">
+            <nav class="nav-name1">
                 <ul>
-                   <li class="name"><a class="brunic" href="/florian.html">Brunic</a></li>
-                   <li class="name"><a class="florian" href="/index.html">Florian</a></li>
+                   <li class="name1"><a class="brunic1" href="/florian.html">Brunic</a></li>
+                   <li class="name1"><a class="florian1" href="/index.html">Florian</a></li>
                 </ul>
             </nav>
             <div class="profile">
