--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="description-part">
            <nav class="nav-name">
                <ul>
-                  <li class="name"><a class="brunic" href="/docs/f-index.html">Brunic</a></li>
-                  <li class="name"><a class="florian" href="/docs/index.html">Florian</a></li>
+                  <li class="name"><a class="brunic" href="/f-index.html">Brunic</a></li>
+                  <li class="name"><a class="florian" href="/index.html">Florian</a></li>
                </ul>
            </nav> 
            <div class="photo">
