--- a/f-index.html
+++ b/f-index.html
@@ -44,8 +44,8 @@
     <div class="content">
         <nav class="nav-name1">
             <ul>
-                <li class="name1"><a class="brunic1" href="/f-index.html">Brunic</a></li>
-                <li class="name1"><a class="florian1" href="/index.html">Florian</a></li>
+                <li class="name1"><a class="brunic1" href="./f-index.html">Brunic</a></li>
+                <li class="name1"><a class="florian1" href="./index.html">Florian</a></li>
             </ul>
         </nav>
         <div class="profile">
