--- a/f-index.html
+++ b/f-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="/css/style.css">
+    <link rel="stylesheet"  href="css/style.css">
     <title>Document</title>
 </head>
 <body class="body">
@@ -49,7 +49,7 @@
             </ul>
         </nav>
         <div class="profile">
-            <img src="/image/photo-profile.jpeg" alt="Photo de profil" style="max-width: 100px;">
+            <img src="image/photo-profile.jpeg" alt="Photo de profil" style="max-width: 100px;">
         </div>
         <div class="name-age">
             <p>Nom: Brunic</p>
@@ -57,7 +57,7 @@
         </div>
         <div class="section" id="parcours">
             <h2>Parcours Scolaire</h2>
-            <img src="/image/image-parcours.jpg" alt="Image du parcours" style="max-width: 100px;">
+            <img src="image/image-parcours.jpg" alt="Image du parcours" style="max-width: 100px;">
             <p>Brunic a commencé par un BAC spé physique-chimie et mathématiques, puis elle est entrée en première année à l’IIM. 
                 Elle a pu explorer tous les domaines que l'école propose et a finalement choisi l'axe Coding et Innovation Numérique. 
                 Petit mot de Brunic sur sa première année : "C'était une expérience formidable malgré les hauts et les bas. J'ai rencontré des personnes qui m'entraînent souvent à l'Aubrac. 
@@ -65,13 +65,13 @@
         </div>
         <div class="section" id="passions">
             <h2>Passions</h2>
-            <img src="/image/image-passions.jpg" alt="Image des passions" style="max-width: 100px;">
+            <img src="image/image-passions.jpg" alt="Image des passions" style="max-width: 100px;">
             <p>Brunic aime beaucoup la musique. Elle adore écouter de la musique en écoutant différents artistes et différents styles de musique.
                 Elle aime aussi faire de la danse.</p>
         </div>
         <div class="section" id="comportement">
             <h2>Comportement</h2>
-            <img src="/image/image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
+            <img src="image/image-comportement.jpg" alt="Image du comportement" style="max-width: 100px;">
             <p>Tout d’abord Brunic est une personne relativement calme. 
                 Elle se décrit comme à moitié sociable parce qu'elle parle et sympathise quand il le faut. À côté de tout ceci elle est plutôt bien organisée dans ses journées en général. 
                 Elle prévoit bien avant ce qu’elle doit faire les jours suivants. On l’a très souvent décrit comme ambitieuse et travailleuse parce qu’elle se fixe des objectifs. 
